PostGIS 3.3.8
2024-xx-xx

* Bug Fixes and Enhancements *

 -


PostGIS 3.3.7
2024-09-05

This version requires PostgreSQL 11-17, GEOS 3.6 or higher, and Proj 4.9+
Additional features are enabled if you are running GEOS 3.9+
(and ST_MakeValid enhancements with 3.10+), Proj 6.1+,
and PostgreSQL 15+.

* Bug Fixes and Enhancements *

 - #5766, Always report invalid non-null MBR of universal face (Sandro Santilli)
 - #5709, Fix loose mbr in topology.face on ST_ChangeEdgeGeom (Sandro Santilli)
 - #5698, Fix robustness issue splitting line by vertex very close to endpoints,
          affecting topology population functions (Sandro Santilli)
 - #5649, ST_Value should return NULL on missing band (Paul Ramsey)
 - #5677, ST_Union(geom[]) should unary union single entry arrays (Paul Ramsey)
 - #5679, Remove spurious COMMIT statements from sfcgal script
          (Sandro Santilli, Loïc Bartoletti)
 - #5680, Fix populate_topology_layer with standard_conforming_strings
          set to off (Sandro Santilli)
 - #5589, ST_3DDistance error for shared first point (Paul Ramsey)
 - #5686, ST_NumInteriorRings and Triangle crash (Paul Ramsey)
 - #5671, Bug in ST_Area function with use_spheroid=false
          (Paul Ramsey, Regina Obe)
 - #5687, #5756 Support for PostgreSQL 17, revise postgis_get_full_version_schema()
          to not rely on search_path
 - #5740, ST_DistanceSpheroid(geometry) incorrectly handles polygons (Paul Ramsey)
 - #5765, Handle nearly co-linear edges with slightly less slop (Paul Ramsey)
 - #5745, St_AsLatLonText rounding errors (Paul Ramsey)


PostGIS 3.3.6
2024/02/07

This version requires PostgreSQL 11-16, GEOS 3.6 or higher, and Proj 4.9+
Additional features are enabled if you are running GEOS 3.9+
(and ST_MakeValid enhancements with 3.10+), Proj 6.1+,
and PostgreSQL 15+.

* Bug Fixes and Enhancements *

 - #5633, Fix postgis load, upgrade and usage with standard_conforming_strings
          set to off (Sandro Santilli, Regina Obe)