@@ -3,7 +3,8 @@ PostGIS 3.3.8
 
 * Bug Fixes and Enhancements *
 
- -
+ - #5785, [raster] ST_MapAlgebra segfaults when expression references
+          a supernumerary rast argument (Dian M Fay)
 
 
 PostGIS 3.3.7
